# dopamine

./: Agents.md  Cargo.toml  README.md  TODO.md  go.mod  go.sum
cmd/dopamine/: main.go
internal/audio/: engine.go  visualizer.go
internal/ui/: config.go  theme.go  ui.go
src/: app.rs  audio.rs  config.rs  db.rs  library.rs  main.rs  models.rs  mpris.rs  network.rs  ui.rs
