[package]
name = "dopamine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
cpal = "0.17.3"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
image = "0.25.9"
lofty = "0.23.2"
mpris-player = "0.6.2"
rand = "0.10.0"
ratatui = "0.30.0"
rodio = "0.22.1"
rusqlite = "0.38.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.4"
tui-input = "0.15.0"
walkdir = "2.5.0"
